swagger complete, dockerization complete
